--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .header-title{
+
     padding-left: 100px;
 }
 
@@ -36,7 +37,7 @@ header div h2{
     justify-content: center;
 }
 .image-area img{
-    width: 70%;
+    width: 60%;
 }
 .booking-button a{
     text-decoration: none;
@@ -113,5 +114,51 @@ header div h2{
     font-weight: 700;
     font-family: Inter;
 }
+.more-info a, .fa-arrow-right{
+    text-decoration: none;
+    color: #E02C6D;
+    font-weight: 700;
+}
+.more-info{
+    display: flex;
+    justify-content: end;
+    margin: 40px 165px;
+}
 
 /* End Middle Part  */
+/* Start Footer  */
+
+footer{
+    width: 85%;
+    margin: 0 auto;
+    background-color: black;
+    margin-bottom: 20px;
+    text-align: center;
+}
+footer div{
+    color: whitesmoke;
+    padding-bottom: 40px;
+}
+footer h3{
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 5px;
+    margin-bottom: 0;
+}
+footer p{
+    padding-bottom: 5px;
+    margin: 0;
+}
+.social-media{
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns:auto;
+}
+.fab{
+    color: whitesmoke;
+}
+.media-padding{
+    margin-right: 20px;
+}
