--- a/style.css
+++ b/style.css
@@ -8,15 +8,13 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .header-title{
-
     padding-left: 100px;
+    padding-top: 30px;
 }
 
 /* start Header Part  */
 header{
     display: flex;
-    
-
 }
 .text-area{
     width: 50%;
@@ -35,10 +33,20 @@ header div h2{
     width: 50%;
     display: flex;
     justify-content: center;
+    position: relative;
+    overflow: hidden;
 }
 .image-area img{
     width: 60%;
 }
+
+/* Header Transform Effect  */
+.image-area img:hover{
+    transform: scale(1.5);
+    transition: transform 3s ease-out;
+}
+
+/* Header Transform Effect  */
 .booking-button a{
     text-decoration: none;
     color: #FFFFFF;
@@ -194,3 +202,6 @@ footer p{
 .media-padding{
     margin-right: 20px;
 }
+ /* End FOoter  */
+
+ /* Media Query  */
