--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ footer p{
      }
      footer{
          width: 100%;
+         margin-bottom: 15px;
      }
  }
 
@@ -264,5 +265,39 @@ footer p{
          width: 100%;
          margin: 0;
          padding: 0;
+     }
+     .header-title{
+         padding-left: 260px;
+     }
+     header{
+         width: 100%;
+     }
+     .text-area{
+         padding-left: 40px;
+     }
+     .text-area h2{
+         font-size: 30px;
+         /* text-align: center; */
+     }
+     .image-area img{
+         width: 90%;
+     }
+     .grid-container{
+         grid-template-columns: repeat(2, 1fr);
+         padding-left: 20px;
+     }
+     .more-info{
+         margin-right: 100px;
+         font-size: 30px;
+     }
+     .more-info i{
+         font-size: 23px;
+     }
+     .img-side img{
+         margin-left: 20px;
+     }
+     footer{
+         width: 100%;
+         margin-bottom: 15px;
      }
  }
